# crm-itinerary-api

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
src/api/: urls.py
src/api/exceptions/: errors.py  handler.py
src/api/utils/clients/: oauthclient.py
src/api/v1/: urls.py
src/api/v1/auth/: serializers.py  service.py  urls.py
src/api/v1/auth/endpoints/: login.py  signup.py  users.py
src/api/v1/customers/: endpoints.py  serializers.py  service.py  urls.py
src/api/v1/itineraries/: endpoints.py  serializers.py  services.py  urls.py
src/config/: urls.py
src/config/envs/: .env.dev
src/config/settings/: __init__.py  base.py  dev.py  prod.py
src/core/: admin.py
src/core/migrations/: 0001_initial.py  0002_alter_itinerary_options_customer_user_user_user_type_and_more.py
src/core/models/: __init__.py  customer.py  itinerary.py  user.py  validators.py
